--- a/src/test/java/testproperties/test.properties
+++ b/src/test/java/testproperties/test.properties
@@ -1,5 +1,5 @@
 website.url=http://www.swiggy.com
-testData.file=./testdata.xlsx
+testData.filePath=./
 testData.fileName=testdata.xlsx
 lazyload.timeout=10
 explicitwait.timeout=10
