--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,42 @@
 	    <artifactId>poi-ooxml</artifactId>
 	    <version>3.15</version>
 	</dependency>
+	<dependency>
+	    <groupId>info.cukes</groupId>
+	    <artifactId>gherkin</artifactId>
+	    <version>2.12.2</version>
+	</dependency>
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-core</artifactId>
+	    <version>6.9.1</version>
+	</dependency>
+	<dependency>
+		    <groupId>io.cucumber</groupId>
+		    <artifactId>cucumber-java</artifactId>
+		    <version>6.9.1</version>
+		</dependency>
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-testng</artifactId>
+	    <version>6.9.1</version>
+	</dependency>
+	<dependency>
+		<groupId>io.cucumber</groupId>
+		<artifactId>cucumber-java8</artifactId>
+		<version>6.9.1</version>
+	</dependency>
+	<dependency>
+		<groupId>io.cucumber</groupId>
+		<artifactId>cucumber-jvm</artifactId>
+		<version>6.9.1</version>
+		<type>pom</type>
+	</dependency>
+	<dependency>
+		<groupId>com.relevantcodes</groupId>
+		<artifactId>extentreports</artifactId>
+		<version>2.41.2</version>
+	</dependency>
   </dependencies>
   <build>
     <!--<sourceDirectory>src</sourceDirectory>-->
