Updated with testing properties

--- a/src/test/java/testproperties/test.properties
+++ b/src/test/java/testproperties/test.properties
@@ -1,16 +1,9 @@
 website.url=http://www.swiggy.com
 testData.filePath=./
 testData.fileName=testdata.xlsx
-lazyload.timeout=10
-explicitwait.timeout=10
-pageload.timeout=60
-element.ctr=0
+loadAndWait.timeout=10
 mac.drivers=./drivers/mac
 linux.drivers=./drivers/linux
 windows.drivers=./drivers/windows
-#Browser types (set values as chrome, firefox, ie, safari, opera, etc.)
 designatedBrowser.type=chrome
-browser.count=3
-browser.name0=chrome
-browser.name1=firefox
-browser.name2=safari
+extentreport.file=./extentReports/SwiggyRegressionTests_ExtentReport.html
