--- a/src/test/java/testproperties/test.properties
+++ b/src/test/java/testproperties/test.properties
@@ -7,3 +7,4 @@ linux.drivers=./drivers/linux
 windows.drivers=./drivers/windows
 designatedBrowser.type=chrome
 extentreport.file=./extentReports/SwiggyRegressionTests_ExtentReport.html
+screenshot.folder=./screenshots
