--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 		<artifactId>extentreports</artifactId>
 		<version>2.41.2</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.8.0</version>
+	</dependency>
   </dependencies>
   <build>
     <!--<sourceDirectory>src</sourceDirectory>-->
