--- a/src/test/java/testproperties/test.properties
+++ b/src/test/java/testproperties/test.properties
@@ -6,5 +6,7 @@ mac.drivers=./drivers/mac
 linux.drivers=./drivers/linux
 windows.drivers=./drivers/windows
 designatedBrowser.type=chrome
+remote.driver=y
+remote.hubUrl=http://172.17.0.1:4444/wd/hub
 extentreport.file=./extentReports/SwiggyRegressionTests_ExtentReport.html
 screenshot.folder=./screenshots
